# ser2tcp

./: .gitignore  LICENSE  README.md  global_logging.conf  my.conf  pyproject.toml  run.py  ser2tcp-system.service  ser2tcp.conf.orig  ser2tcp.py  ser2tcp.service  setup.py  test.conf
.github/workflows/: publish.yml  tests.yml
ser2tcp/: _app.py  conf_models.py  connection.py  connection_control.py  connection_socket.py  connection_ssl.py  connection_tcp.py  connection_telnet.py  connection_unix.py  http_auth.py  http_server.py  ip_filter.py  main.py  serial_proxy.py  server.py  server_manager.py  server_monitor.py  server_websocket.py
ser2tcp/html/: app.js  index.html  monitor.html  raw.html  style.css  xterm.html
tests/: test_connection.py  test_connection_control.py  test_connection_ssl.py  test_connection_telnet.py  test_http_auth.py  test_http_server.py  test_ip_filter.py  test_serial_proxy.py  test_server_monitor.py  test_server_websocket.py
